--- a/.gitignore
+++ b/.gitignore
@@ -234,4 +234,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Extra
+.VSCodeCounter/
+
 # End of https://www.toptal.com/developers/gitignore/api/node,linux,macos,windows,visualstudiocode
